--- a/payslip/pom.xml
+++ b/payslip/pom.xml
@@ -59,6 +59,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
         <configuration>
+        <source>8</source>
         <additionalparam>-Xdoclint:none</additionalparam>
         </configuration>
       </plugin>
